--- a/web/app/plugins/blocks/package.json
+++ b/web/app/plugins/blocks/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@knowler/blocks",
   "version": "0.1.0",
+  "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "babel src -d dist --watch",
-    "build": "rimraf dist && babel src -d dist"
+    "build": "webpack --mode development --progress",
+    "build:production": "webpack --mode production --progress",
+    "start": "webpack --mode development --progress --watch"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "rimraf": "^2.6.3"
+    "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^2.0.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "@wordpress/blocks": "^6.0.7",
