--- a/web/app/plugins/blocks/package.json
+++ b/web/app/plugins/blocks/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@wordpress/blocks": "^6.0.7",
-    "@wordpress/editor": "^9.0.11"
+    "@wordpress/editor": "^9.0.11",
+    "@wordpress/i18n": "^3.1.1"
   }
 }
