--- a/web/app/themes/sage/composer.json
+++ b/web/app/themes/sage/composer.json
@@ -33,27 +33,18 @@
       "App\\": "app/"
     }
   },
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/qwp6t/acorn"
-    }
-  ],
-  "minimum-stability": "dev",
   "require": {
     "php": ">=7.1",
-    "roots/acorn": "dev-master"
+    "roots/acorn": "dev-master",
+    "roots/support": "dev-master",
+    "knowler/acf-block-builder": "^1.2"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.3",
-    "roots/sage-installer": "~1.3"
+    "squizlabs/php_codesniffer": "^3.3"
   },
   "scripts": {
     "test": [
       "phpcs"
-    ],
-    "post-create-project-cmd": [
-      "Roots\\Sage\\Installer\\ComposerScript::postCreateProject"
     ]
   }
 }
